src/syntax/events/snapshots/spacetime__syntax__events__baseline_tests__test_body_expressions__snapshot_arrow_fn_in_assert_mangled.snap
---
source: src/syntax/events/baseline_tests.rs
expression: cst
---
ROOT
  DIRECTIVE
    AT_SIGN "@"
    IDENT "test"
    ARG ""t""
    BODY
      L_BRACE "{"
      DIRECTIVE
        AT_SIGN "@"
        IDENT "assert"
        ARG_LIST
          L_PAREN "("
          ARG
            IDENT "arr"
            DOT "."
            IDENT "filter"
            ARG_LIST
              L_PAREN "("
              ARG "x"
              ARG
                ERROR "=>"
              ARG "x > 3"
              R_PAREN ")"
            DOT "."
            IDENT "length"
            EQ_EQ_EQ "==="
            NUMBER "2"
          R_PAREN ")"
      R_BRACE "}"
  EOF ""
