src/syntax/events/snapshots/spacetime__syntax__events__baseline_tests__test_body_expressions__snapshot_assert_strict_inequality.snap
---
source: src/syntax/events/baseline_tests.rs
expression: cst
---
ROOT
  DIRECTIVE
    AT_SIGN "@"
    IDENT "test"
    ARG ""t""
    BODY
      L_BRACE "{"
      DIRECTIVE
        AT_SIGN "@"
        IDENT "assert"
        ARG_LIST
          L_PAREN "("
          ARG "x !== 'hello'"
          R_PAREN ")"
      R_BRACE "}"
  EOF ""
