src/syntax/events/snapshots/spacetime__syntax__events__baseline_tests__test_body_expressions__snapshot_eval_simple.snap
---
source: src/syntax/events/baseline_tests.rs
expression: cst
---
ROOT
  DIRECTIVE
    AT_SIGN "@"
    IDENT "test"
    ARG ""t""
    BODY
      L_BRACE "{"
      DIRECTIVE
        AT_SIGN "@"
        IDENT "eval"
        ARG_LIST
          L_PAREN "("
          ARG "window.__flag = 'yes'"
          R_PAREN ")"
      R_BRACE "}"
  EOF ""
