src/syntax/events/snapshots/spacetime__syntax__events__baseline_tests__test_body_expressions__snapshot_eval_with_eval_string.snap
---
source: src/syntax/events/baseline_tests.rs
expression: cst
---
ROOT
  DIRECTIVE
    AT_SIGN "@"
    IDENT "test"
    ARG ""t""
    BODY
      L_BRACE "{"
      DIRECTIVE
        AT_SIGN "@"
        IDENT "eval"
        ARG_LIST
          L_PAREN "("
          ARG
            IDENT "eval"
            ARG_LIST
              L_PAREN "("
              ARG ""setTimeout(function() { x = 1; }, 50)""
              R_PAREN ")"
          R_PAREN ")"
      R_BRACE "}"
  EOF ""
