src/syntax/events/snapshots/spacetime__syntax__events__baseline_tests__test_body_expressions__snapshot_fixture_with_html.snap
---
source: src/syntax/events/baseline_tests.rs
expression: cst
---
ROOT
  DIRECTIVE
    AT_SIGN "@"
    IDENT "test"
    ARG ""t""
    BODY
      L_BRACE "{"
      DIRECTIVE
        AT_SIGN "@"
        IDENT "fixture"
        BODY
          L_BRACE "{"
          HTML_ELEMENT "<div class="test">Hello</div>"
          R_BRACE "}"
      R_BRACE "}"
  EOF ""
